--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
+    "pixi.js": "^7.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rune-games-sdk": "^4.11.0",
