--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rune-games-sdk": "^4.11.0",
-    "styled-components": "^6.0.5"
+    "styled-components": "^6.0.5",
+    "victor": "^1.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/victor": "^1.1.0",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
