--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "preview": "vite preview",
     "format": "prettier --write ./src"
   },
+  "repository": {
+    "url": "https://github.com/rayriffy/reactjam2023"
+  },
   "dependencies": {
     "@nanostores/react": "^0.7.1",
     "nanostores": "^0.9.3",
